<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="app.cap.foodreet.FirstActivity">
    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/image"
        android:src="@mipmap/ic_launcher"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_below="@+id/image"
        android:id="@+id/text1"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginTop="30dp"
        android:layout_below="@+id/text1"
        android:id="@+id/button_owner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/join_owner"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button_owner"
        android:id="@+id/button_user"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/join_user"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>