<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                tools:context="app.cap.foodreet.SignUp.SignUpActivity">
    <EditText
        android:id="@+id/xetSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/xetSignUpPassword"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/tv_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/common_google_signin_btn_text_light_focused" />
    <EditText
        android:id="@+id/xetSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/xetPasswordConfirm"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/tv_style"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:padding="15dp"
        android:textColorHint="@color/common_google_signin_btn_text_light_focused" />
    <EditText
        android:id="@+id/xetPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/xbnSignUp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/tv_style"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="@color/common_google_signin_btn_text_light_focused" />
    <Button
        android:id="@+id/xbnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn_style"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/newAccount"
        android:textSize="30sp" />
    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@color/white"
        android:layout_marginTop="-7dp"/>
</RelativeLayout>
